--- a/i18n/bilbo_fr.po
+++ b/i18n/bilbo_fr.po
@@ -5,11 +5,11 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Aragorn 3\n"
+"Project-Id-Version: Bilboplanet 0.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-11-15 23:24+0100\n"
-"PO-Revision-Date: 2009-11-17 16:54+0100\n"
-"Last-Translator: Grégoire de Hemptinne <theclimber@gmail.com>\n"
+"PO-Revision-Date: 2009-11-30 15:31+0100\n"
+"Last-Translator: Grégoire de Hemptinne <greg@theclimber.be>\n"
 "Language-Team: French\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
