Removing modrewrite dependency

--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
 TODO dans l'ordre de priorité :
 
+Voir la version des bugs a jour a l'adresse : 
+http://projets.developpez.com/projects/bilboplanet/issues
+
 ===================================================
 * Milestone 0.3
 ===================================================
