--- a/i18n/files.txt
+++ b/i18n/files.txt
@@ -6,11 +6,13 @@ index.php
 inscription.php
 mobile.php
 stats.php
+tpl.php
 api/votes.php
 admin/auth.php
 admin/footer.php
 admin/head.php
 admin/index.php
+admin/manage-account.php
 admin/manage-cache.php
 admin/manage-database.php
 admin/manage-feed.php
@@ -27,6 +29,7 @@ admin/manage-useroption.php
 admin/pagination.php
 admin/sidebar.php
 admin/api/index.php
+admin/api/manage-account_api.php
 admin/api/manage-database_api.php
 admin/api/manage-feed_api.php
 admin/api/manage-moderation_api.php
@@ -36,13 +39,21 @@ admin/api/manage-selection_api.php
 admin/api/manage-site_api.php
 admin/api/manage-user_api.php
 admin/install/check.php
+admin/install/i18n.php
 admin/install/index.php
 admin/install/wizard.php
 inc/fonctions.php
+inc/core_error.php
+inc/cron.php
+inc/cron_fct.php
+inc/prepend.php
+inc/update_manual.php
+inc/admin/prepend.php
 inc/core/class.bp.auth.php
 inc/core/class.bp.core.php
 inc/core/class.bp.settings.php
 inc/core/class.dc.modules.php
+widgets/sidebar-widget.php
 themes/legolas/archives.tpl
 themes/legolas/contact.tpl
 themes/legolas/footer.tpl
