--- a/i18n/files.txt
+++ b/i18n/files.txt
@@ -1,66 +1,61 @@
-404.php
+tpl.php
 archives.php
-contact.php
-feed.php
-index.php
+404.php
 inscription.php
 mobile.php
+feed.php
 stats.php
-tpl.php
+contact.php
+index.php
+widgets/sidebar-widget.php
+widgets/tmp.php
 api/votes.php
-admin/auth.php
-admin/footer.php
-admin/head.php
-admin/index.php
-admin/manage-account.php
-admin/manage-cache.php
-admin/manage-database.php
-admin/manage-feed.php
-admin/manage-logs.php
-admin/manage-moderation.php
-admin/manage-newsletter.php
-admin/manage-option.php
-admin/manage-permissions.php
-admin/manage-post.php
-admin/manage-selection.php
-admin/manage-update.php
-admin/manage-user.php
-admin/manage-useroption.php
-admin/pagination.php
-admin/sidebar.php
-admin/api/index.php
-admin/api/manage-account_api.php
-admin/api/manage-database_api.php
-admin/api/manage-feed_api.php
-admin/api/manage-moderation_api.php
-admin/api/manage-option_api.php
-admin/api/manage-permissions_api.php
-admin/api/manage-selection_api.php
-admin/api/manage-site_api.php
-admin/api/manage-user_api.php
-admin/install/check.php
-admin/install/i18n.php
-admin/install/index.php
-admin/install/wizard.php
 inc/fonctions.php
-inc/core_error.php
 inc/cron.php
-inc/cron_fct.php
+inc/config.php
 inc/prepend.php
+inc/core_error.php
+inc/cron_fct.php
 inc/update_manual.php
-inc/admin/prepend.php
-inc/core/class.bp.auth.php
+inc/dbschema/db-schema.php
 inc/core/class.bp.core.php
 inc/core/class.bp.settings.php
+inc/core/class.dc.error.php
 inc/core/class.dc.modules.php
-widgets/sidebar-widget.php
-themes/legolas/archives.tpl
-themes/legolas/contact.tpl
-themes/legolas/footer.tpl
-themes/legolas/index.tpl
-themes/legolas/menu.tpl
-themes/legolas/mobile.tpl
-themes/legolas/posts.tpl
-themes/legolas/sidebar.tpl
-themes/legolas/stats.tpl
-themes/legolas/subscription.tpl
+inc/core/class.bp.auth.php
+inc/core/class.dc.rest.php
+inc/admin/prepend.php
+admin/manage-post.php
+admin/manage-account.php
+admin/manage-permissions.php
+admin/manage-user.php
+admin/manage-feed.php
+admin/manage-moderation.php
+admin/head.php
+admin/manage-cache.php
+admin/manage-option.php
+admin/manage-newsletter.php
+admin/pagination.php
+admin/manage-selection.php
+admin/index.php
+admin/manage-useroption.php
+admin/manage-logs.php
+admin/footer.php
+admin/manage-database.php
+admin/manage-update.php
+admin/auth.php
+admin/sidebar.php
+admin/install/wizard.php
+admin/install/i18n.php
+admin/install/check.php
+admin/install/index.php
+admin/api/manage-feed_api.php
+admin/api/manage-user_api.php
+admin/api/manage-database_api.php
+admin/api/manage-option_api.php
+admin/api/manage-selection_api.php
+admin/api/manage-site_api.php
+admin/api/manage-account_api.php
+admin/api/index.php
+admin/api/manage-permissions_api.php
+admin/api/manage-moderation_api.php
