--- a/i18n/bilbo_de.po
+++ b/i18n/bilbo_de.po
@@ -1165,7 +1165,7 @@ msgstr "Website URL"
 
 #: admin/manage-user.php:181 admin/manage-user.php:199
 #, fuzzy
-msgid "ex: http://blog.bilboplanet.com"
+msgid "ex: http://www.bilboplanet.com"
 msgstr "Dein BilboPlanet"
 
 #: admin/manage-feed.php:48 admin/manage-feed.php:98
@@ -1225,7 +1225,7 @@ msgid "Full feed URL"
 msgstr ""
 
 #: admin/manage-feed.php:131
-msgid "ex: http://blog.bilboplanet.com/feed/atom/"
+msgid "ex: http://www.bilboplanet.com/feed/atom/"
 msgstr ""
 
 #: admin/manage-feed.php:133 admin/manage-feed.php:165
@@ -1261,7 +1261,7 @@ msgstr "Feed : "
 
 #: admin/manage-feed.php:171
 #, fuzzy
-msgid "ex: http://blog.bilboplanet.com/feed/"
+msgid "ex: http://www.bilboplanet.com/feed/"
 msgstr "Dein BilboPlanet"
 
 #: admin/manage-moderation.php:48 admin/sidebar.php:88
