Mise a jour des traductions en FR et en DE

--- a/i18n/files.txt
+++ b/i18n/files.txt
@@ -1,60 +1,102 @@
-404.php
+tpl.php
 archives.php
-contact.php
-feed.php
-index.php
+404.php
 inscription.php
 mobile.php
+feed.php
 stats.php
-tpl.php
-admin/auth.php
-admin/footer.php
-admin/head.php
-admin/index.php
-admin/manage-account.php
-admin/manage-cache.php
-admin/manage-database.php
-admin/manage-feed.php
-admin/manage-logs.php
-admin/manage-moderation.php
-admin/manage-newsletter.php
-admin/manage-option.php
-admin/manage-permissions.php
-admin/manage-post.php
-admin/manage-selection.php
-admin/manage-update.php
-admin/manage-user.php
-admin/manage-useroption.php
-admin/pagination.php
-admin/sidebar.php
-admin/api/index.php
-admin/api/manage-account_api.php
-admin/api/manage-database_api.php
-admin/api/manage-feed_api.php
-admin/api/manage-moderation_api.php
-admin/api/manage-option_api.php
-admin/api/manage-permissions_api.php
-admin/api/manage-selection_api.php
-admin/api/manage-site_api.php
-admin/api/manage-user_api.php
-admin/install/check.php
-admin/install/i18n.php
-admin/install/index.php
-admin/install/wizard.php
+contact.php
+index.php
+widgets/sidebar-widget.php
+widgets/tmp.php
 api/votes.php
-inc/config.php
-inc/core_error.php
-inc/cron.php
-inc/cron_fct.php
+api/index.php
 inc/fonctions.php
+inc/config2.php
+inc/cron.php
+inc/config.php
 inc/prepend.php
+inc/core_error.php
+inc/cron_fct.php
+inc/index.php
 inc/update_manual.php
-inc/admin/prepend.php
-inc/core/class.bp.auth.php
+inc/dbschema/db-schema.php
+inc/dbschema/index.php
 inc/core/class.bp.core.php
 inc/core/class.bp.settings.php
 inc/core/class.dc.error.php
 inc/core/class.dc.modules.php
+inc/core/class.bp.auth.php
+inc/core/index.php
 inc/core/class.dc.rest.php
-inc/dbschema/db-schema.php
-widgets/sidebar-widget.php
+inc/admin/prepend.php
+inc/admin/index.php
+i18n/index.php
+themes/index.php
+themes/gandalf/index.php
+themes/gandalf/js/index.php
+themes/gandalf/css/index.php
+themes/gandalf/images/index.php
+themes/aragorn/index.php
+themes/aragorn/js/index.php
+themes/aragorn/css/index.php
+themes/aragorn/images/index.php
+themes/legolas/index.php
+themes/legolas/js/index.php
+themes/legolas/css/index.php
+themes/legolas/css/blueprint/index.php
+themes/legolas/css/blueprint/src/index.php
+themes/legolas/css/blueprint/plugins/index.php
+themes/legolas/css/blueprint/plugins/fancy-type/index.php
+themes/legolas/css/blueprint/plugins/buttons/index.php
+themes/legolas/css/blueprint/plugins/buttons/icons/index.php
+themes/legolas/css/blueprint/plugins/link-icons/index.php
+themes/legolas/css/blueprint/plugins/link-icons/icons/index.php
+themes/legolas/css/blueprint/plugins/rtl/index.php
+themes/legolas/css/brandongrotesque_light/index.php
+themes/legolas/images/index.php
+themes/gil-galad/index.php
+themes/gil-galad/js/index.php
+themes/gil-galad/css/index.php
+themes/gil-galad/images/index.php
+admin/manage-post.php
+admin/manage-account.php
+admin/manage-permissions.php
+admin/manage-user.php
+admin/manage-feed.php
+admin/manage-moderation.php
+admin/head.php
+admin/manage-cache.php
+admin/manage-option.php
+admin/manage-newsletter.php
+admin/pagination.php
+admin/manage-selection.php
+admin/index.php
+admin/manage-useroption.php
+admin/manage-logs.php
+admin/footer.php
+admin/manage-database.php
+admin/manage-update.php
+admin/auth.php
+admin/sidebar.php
+admin/install/wizard.php
+admin/install/i18n.php
+admin/install/check.php
+admin/install/index.php
+admin/install/meta/index.php
+admin/install/meta/css/index.php
+admin/install/meta/images/index.php
+admin/api/manage-feed_api.php
+admin/api/manage-user_api.php
+admin/api/manage-database_api.php
+admin/api/manage-option_api.php
+admin/api/manage-selection_api.php
+admin/api/manage-site_api.php
+admin/api/manage-account_api.php
+admin/api/index.php
+admin/api/manage-permissions_api.php
+admin/api/manage-moderation_api.php
+admin/meta/index.php
+admin/meta/js/index.php
+admin/meta/icons/index.php
+admin/meta/css/index.php
