--- a/i18n/bilbo_nl.po
+++ b/i18n/bilbo_nl.po
@@ -1856,14 +1856,58 @@ msgid "Enable update on loading of index page"
 msgstr "Activeer de update tijdens het laden van de index pagina"
 
 #: admin/manage-update.php:141
-msgid "Setup manual crontab"
-msgstr "Maak uw eigen crontab"
+msgid "Setup feed update"
+msgstr ""
 
 #: admin/manage-update.php:143
-msgid "How to do a manual update ?"
-msgstr "Hoe een manuele update maken?"
+#, fuzzy
+msgid "How to configure the update of the feeds ?"
+msgstr "Bezoek de website van %s"
 
 #: admin/manage-update.php:146
+msgid "How does it work?"
+msgstr ""
+
+#: admin/manage-update.php:147
+msgid ""
+"The update algorithm can work on several ways. The optimal solution that "
+"consumes less ressources and will give you the best results is clearly to "
+"setup a cron update manually into your server. But here you'll find a short "
+"explanation of the several methods :"
+msgstr ""
+
+#: admin/manage-update.php:149
+msgid ""
+"The first intuitive way is to use this page to update manually the feeds of "
+"your database by clicking on the 'Start a manual update' option in the menu "
+"above. This means that it will update all your feeds only once."
+msgstr ""
+
+#: admin/manage-update.php:150
+msgid ""
+"The second solution is to click on the 'Start the update algorithm' in the "
+"form. This will enable a PHP script which will fetch your feeds. This can be "
+"done but needs some special PHP libraries on your web server that may not be "
+"installed. This solution can be used but we advise you to check sometimes if "
+"the update engine is still alive (it can be killed after a time)"
+msgstr ""
+
+#: admin/manage-update.php:151
+msgid ""
+"Another intuitive way to configure the update of your feeds is by enabling "
+"update on index page loading. This means that all your feeds will be updated "
+"whenever people connect to your site. This is a good manner to deal with the "
+"update but can slightly slow down your site."
+msgstr ""
+
+#: admin/manage-update.php:152
+msgid ""
+"The optimal solution as said before it to configure manually the crontab of "
+"your server to enable the update. To configure a cron manually you'll find "
+"some advice here under."
+msgstr ""
+
+#: admin/manage-update.php:156
 msgid ""
 "You can setup a manual crontab update by calling automatically every X time "
 "the following page :"
@@ -1871,7 +1915,7 @@ msgstr ""
 "U kunt uw eigen crontab instellen door een oproep naar de volgende pagina "
 "elke X minuten te maken :"
 
-#: admin/manage-update.php:148
+#: admin/manage-update.php:158
 msgid ""
 "This will automatically launch the update and log it into the log files."
 msgstr ""
@@ -3007,6 +3051,12 @@ msgstr "Wijgeren"
 #, php-format
 msgid "%s last posts :"
 msgstr "%s laatste berichten"
+
+#~ msgid "Setup manual crontab"
+#~ msgstr "Maak uw eigen crontab"
+
+#~ msgid "How to do a manual update ?"
+#~ msgstr "Hoe een manuele update maken?"
 
 #~ msgid "Error 404"
 #~ msgstr "Error 404"
